# DevHub

./: .gitignore  Cargo.toml  index.js
DevHubExtension/: manifest.json  package-lock.json  package.json
DevHubExtension/src/: storage.ts
DevHubExtension/src/background/: backgroundAPI.ts  backgroundIndex.ts  background_index.ts  contentActionHandler.ts  index.ts
DevHubExtension/src/content/: contentAPI.ts  contentIndex.ts  content_index.ts  index.ts
DevHubExtension/src/content/pages/: BitbucketPage.ts  PageType.ts  SidBoxPage.ts
DevHubExtension/src/utils/: constants.ts
MockSite/: index.html  index.js
development_hub/: package-lock.json  package.json
development_hub/src/: App.svelte
development_hub/src-tauri/: Cargo.toml  tauri.conf.json
development_hub/src-tauri/src/: main.rs
development_hub/src-tauri/src/processes/: mod.rs  server.rs  server_types.rs
development_hub/src-tauri/src/utils/: handle.rs
test_websocket_server/: Cargo.toml
test_websocket_server/src/: main.rs
